2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* *.c: Unify the capitalization of section headings.

2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* gmountoperation.c: Add properties
	
	* gdatainputstream.c: Turn byte-order and newline-type into
	properties.

2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* gioenumtypes.[hc].template: Templates for enum registration

	* Makefile.am: Generate gioenumtypes.[hc]

	* gio.h: Include gioenumtypes.h
	* gappinfo.h:
	* gfile.h: Add some explicit nicks.

	* gio.symbols: Add new symbols

	* pltcheck.sh: Adjust

2007-11-30  Matthias Clasen <mclasen@redhat.com>

	* *.c: Explain etags and link to the explanation

2007-11-29  Matthias Clasen <mclasen@redhat.com>

	* *.c: Explain I/O priority.

	* *.c: More coding style fixes.

2007-11-29  Matthias Clasen <mclasen@redhat.com>

	* gasyncresult.c: Add another paragraph to the intro,
	adjust coding style of example.

2007-11-29  A. Walton <awalton@svn.gnome.org>

	* gappinfo.c:
	  Fixes unknown meaning in GAppLaunchContext docs.
	* gfile.c:
	  Clarify asynchronous ops.
	* gfileattribute.c:
	  Fix entity tag docs.
	* gicon.c:
	* gthemedicon.c:
	  Provides missing gtk-doc section, fixes API docs slighly.
	* gsimpleasyncresult.c:
	  Fill in missing info in docs.
	* gunixinputstream.c:
	* gunixoutputstream.c:
	  Be more expressive in short description.
	* gunixvolume.c:
	  Remove gtk-doc stubs for non-public API.

2007-11-28  Matthias Clasen  <mclasen@redhat.com>

	* *.c: Coding style fixups

2007-11-28  Matthias Clasen  <mclasen@redhat.com>

	* inotify/inotify-helper.c: Don't export the lock from libgio.

2007-11-28  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am:
	* abicheck.sh: Fix copy-and-paste leftovers 

2007-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gfile.h: Add G_FILE_COPY_FLAGS_NONE for consistency.

2007-11-28  Alexander Larsson  <alexl@redhat.com>

        * Makefile.am:
        * gdriveprivate.h:
	Removed unnecessary file
	